src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>netsuite_conn__Celigo_Discount_Applied_In_NetSuite__c</fullName>
        <label>Discount Applied in NetSuite</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Item_Id__c</fullName>
        <label>NetSuite Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Order_Line_Id__c</fullName>
        <externalId>true</externalId>
        <label>NetSuite Order Line Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>netsuite_conn__Pushed_From_NetSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pushed From NetSuite</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>